--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,478 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/fav/favicon.ico"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <img
+        class="header__menu-button"
+        src="./images/header/baseline-menu.png"
+        alt="menu"
+      />
+      <div class="header__top">
+        <a
+          href="#"
+          class="header__logo-link"
+        >
+          <img
+            src="./images/header/namu-logo.png"
+            alt="namu logo"
+            class="header__logo"
+          />
+        </a>
+      </div>
+      <div class="header__bottom">
+        <h1 class="header__title">
+          ХУДОЖНІЙ
+          <br />
+          МУЗЕЙ
+        </h1>
+        <a
+          href="#"
+          class="header__button-wrapper"
+        >
+          <button class="header__button">
+            <span class="header__button-text">КВИТКИ</span>
+            <div class="header__button-square">
+              <img
+                src="./images/header/baseline-keyboard_arrow_right-24px.png"
+                alt="arrow"
+                class="header__button-icon"
+              />
+            </div>
+          </button>
+        </a>
+
+        <div class="header__event">
+          <div class="header__event-line"></div>
+          <span class="header__event-text">ПОДІЇ</span>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu">
+      <div class="menu__header">
+        <div class="menu__content-wrapper">
+          <section class="menu__navigation">
+            <div class="menu__button-wrapper">
+              <img
+                src="./images/menu/ri-close-fill.png"
+                alt="menu closer"
+                class="menu__button-icon"
+              />
+            </div>
+            <nav class="menu__nav">
+              <ul class="menu__list">
+                <a
+                  href="#galary"
+                  class="menu__link"
+                >
+                  <li class="menu__item">Галерея</li>
+                </a>
+                <a
+                  href="#subscription"
+                  class="menu__link"
+                >
+                  <li class="menu__item">Про Нас</li>
+                </a>
+                <a
+                  href="#events"
+                  class="menu__link"
+                >
+                  <li class="menu__item">Виставки та події</li>
+                </a>
+                <a
+                  href="#contacts"
+                  class="menu__link"
+                >
+                  <li class="menu__item">Контакти</li>
+                </a>
+              </ul>
+            </nav>
+          </section>
+          <div class="menu__line"></div>
+          <section class="menu__working-hours">
+            <h3 class="menu__working-hours-title">Графік роботи</h3>
+            <div class="menu__schedule">
+              <ul class="menu__schedule-list">
+                <li class="menu__schedule-item">
+                  <span class="menu__schedule-time">12:00 — 20:00</span>
+                  середа
+                </li>
+                <li class="menu__schedule-item">
+                  <span class="menu__schedule-time">12:00 — 20:00</span>
+                  четвер
+                </li>
+                <li class="menu__schedule-item">
+                  <span class="menu__schedule-time">12:00 — 20:00</span>
+                  п’ятниця
+                </li>
+                <li class="menu__schedule-item">
+                  <span class="menu__schedule-time">11:00 — 19:00</span>
+                  субота
+                </li>
+                <li class="menu__schedule-item">
+                  <span class="menu__schedule-time">11:00 — 19:00</span>
+                  неділя
+                </li>
+              </ul>
+              <p class="menu__days-off">
+                <span class="menu__days-off-title">Вихідні:</span>
+                понеділок, вівторок Каса припиняє роботу за 1 годину до закриття
+                музею
+              </p>
+            </div>
+          </section>
+        </div>
+      </div>
+      <div class="menu__footer"></div>
+    </aside>
+
+    <main class="main">
+      <h2 class="main__title">Актуальні події</h2>
+      <section
+        class="main__articles"
+        id="events"
+      >
+        <article class="article">
+          <img
+            src="./images/main/art-img-1.png"
+            alt="art"
+            class="article__img"
+          />
+          <div class="article__content">
+            <div class="article__date">
+              <span class="article__exhibition">ВИСТАВКА</span>
+              <span class="article__when">26.08-29.11.2019</span>
+            </div>
+            <div class="article__title-wrapper">
+              <h3 class="article__title">Йду і повертаюсь</h3>
+              <div class="article__square"></div>
+            </div>
+
+            <p class="article__description">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </article>
+
+        <article class="article">
+          <img
+            src="./images/main/art-img-2.png"
+            alt="art"
+            class="article__img"
+          />
+          <div class="article__content">
+            <div class="article__date">
+              <span class="article__exhibition">ВИСТАВКА</span>
+              <span class="article__when">26.08-29.11.2019</span>
+            </div>
+            <div class="article__title-wrapper">
+              <h3 class="article__title">І спогади і мрії</h3>
+              <div class="article__square"></div>
+            </div>
+
+            <p class="article__description">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </article>
+      </section>
+      <section class="main__lecture">
+        <div class="main__lecture-content">
+          <div class="main__lecture-date">
+            <span class="main__lecture-name">ЛЕКЦІЯ</span>
+            <span class="main__lecture-time">26/08/2019 - 11:00</span>
+          </div>
+          <h3 class="main__lecture-title">Від класицизму до романтизму</h3>
+        </div>
+      </section>
+
+      <section
+        class="main__galary"
+        id="galary"
+      >
+        <h2 class="main__galary-title">Галерея</h2>
+
+        <div class="main__galary-content">
+          <div class="main__galary-arrows">
+            <span class="main__galary-arrow main__galary-arrow--left">
+              &#8592;
+            </span>
+            <span class="main__galary-arrow main__galary-arrow--right">
+              &#8594;
+            </span>
+          </div>
+
+          <ul class="main__galary-list">
+            <li class="main__galary-item">
+              <img
+                src="./images/galary/img-1.png"
+                alt="img"
+                class="main__galary-img"
+              />
+            </li>
+
+            <li class="main__galary-item">
+              <img
+                src="./images/galary/img-3.png"
+                alt="img"
+                class="main__galary-img"
+              />
+            </li>
+            <li class="main__galary-item">
+              <img
+                src="./images/galary/img-4.png"
+                alt="img"
+                class="main__galary-img"
+              />
+            </li>
+            <li class="main__galary-item">
+              <img
+                src="./images/galary/img-5.png"
+                alt="img"
+                class="main__galary-img"
+              />
+            </li>
+          </ul>
+
+          <div class="main__galary-dots">
+            <div class="main__galary-dot main__galary-dot--active"></div>
+            <div class="main__galary-dot"></div>
+            <div class="main__galary-dot"></div>
+            <div class="main__galary-dot"></div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="main__subscription"
+        id="subscription"
+      >
+        <div class="main__subscription-content">
+          <h2 class="main__subscription-title">Підписка</h2>
+          <p class="main__subscription-description">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form
+            action="#"
+            class="main__subscription-form"
+            novalidate
+          >
+            <input
+              type="email"
+              name="email"
+              id="email"
+              class="main__subscription-input"
+              required
+              placeholder="E-mail"
+            />
+            <button class="main__subscription-btn">
+              <img
+                src="./images/subscription/baseline-keyboard_arrow_right-24px.png"
+                alt="arrow"
+                class="main__subscription-arrow"
+              />
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer
+      class="footer"
+      id="contacts"
+    >
+      <div class="footer__top">
+        <div class="footer__top-icons">
+          <a
+            href="#"
+            class="footer__logo-link"
+          >
+            <img
+              src="./images/footer/namu-logo-footer.png"
+              alt="namu-logo-footer"
+              class="footer__logo-icon"
+            />
+          </a>
+          <div class="footer__sotial-icons">
+            <a
+              href="https://facebook.com"
+              class="footer__sotial-link"
+              target="_blank"
+            >
+              <img
+                src="./images/footer/facebook-letter-logo.png"
+                alt="facebook"
+                class="footer__sotial-icon"
+              />
+            </a>
+            <a
+              href="https://www.instagram.com/"
+              class="footer__sotial-link"
+              target="_blank"
+            >
+              <img
+                src="./images/footer/instagram-logo.png"
+                alt="instagram-logo"
+                class="footer__sotial-icon"
+              />
+            </a>
+          </div>
+        </div>
+        <div class="footer__top-content">
+          <div class="footer__schedule">
+            <h4 class="footer__title">Графік роботи</h4>
+            <ul class="footer__schedule-list">
+              <li class="footer__schedule-item">
+                <span class="footer__schedule-time">12:00 — 20:00</span>
+                середа
+              </li>
+              <li class="footer__schedule-item">
+                <span class="footer__schedule-time">12:00 — 20:00</span>
+                четвер
+              </li>
+              <li class="footer__schedule-item">
+                <span class="footer__schedule-time">12:00 — 20:00</span>
+                п’ятниця
+              </li>
+              <li class="footer__schedule-item">
+                <span class="footer__schedule-time">11:00 — 19:00</span>
+                субота
+              </li>
+              <li class="footer__schedule-item">
+                <span class="footer__schedule-time">11:00 — 19:00</span>
+                неділя
+              </li>
+            </ul>
+            <p class="footer__schedule-note">
+              <span class="footer__schedule-note-title">Вихідні:</span>
+              понеділок, вівторок Каса припиняє роботу за 1 годину до закриття
+              музею
+            </p>
+          </div>
+
+          <div class="footer__contacts">
+            <h4 class="footer__title">Контакти</h4>
+            <ul class="footer__contacts-list">
+              <li class="footer__contacts-item">
+                <a
+                  href="https://www.google.com/maps/place/Mykhaila+Hrushevskoho+St,+6,+Kyiv,+02000/data=!4m2!3m1!1s0x40d4ce52445a8315:0x5e30ef474eddac89?sa=X&ved=1t:242&ictx=111"
+                  class="footer__contacts-link"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+              </li>
+              <li class="footer__contacts-item">
+                <a
+                  href="tel:+38 (044) 278-13-57"
+                  class="footer__contacts-link"
+                >
+                  тел. +38 (044) 278-13-57
+                </a>
+              </li>
+              <li class="footer__contacts-item">
+                <a
+                  href="tel:+38 (044) 278-74-54"
+                  class="footer__contacts-link"
+                >
+                  факс +38 (044) 278-74-54
+                </a>
+              </li>
+              <li class="footer__contacts-item">
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="footer__contacts-link"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer__top-line"></div>
+        <ul class="footer__top-nav">
+          <li class="footer__top-item">
+            <a
+              href="#galary"
+              class="footer__top-link"
+            >
+              Галерея
+            </a>
+          </li>
+          <li class="footer__top-item">
+            <a
+              href="#subscription"
+              class="footer__top-link"
+            >
+              Про Нас
+            </a>
+          </li>
+          <li class="footer__top-item">
+            <a
+              href="#events"
+              class="footer__top-link"
+            >
+              Виставки та події
+            </a>
+          </li>
+          <li class="footer__top-item">
+            <a
+              href="#contacts"
+              class="footer__top-link"
+            >
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__bottom-wrapper">
+        <div class="footer__bottom">
+          <span class="footer__bottom-athor">Designed by Zhyriada Marina</span>
+          <span class="footer__bottom-copyright">
+            Copyright © 2019. All Rights Reserved.
+          </span>
+        </div>
+      </div>
+    </footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
