--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,524 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      href="/src/images/header-logo.svg"
+    />
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="./styles/styles.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <!-- #region header -->
+    <header class="header page__header">
+      <div class="header__background"></div>
+      <div class="header__content">
+        <div class="header__top">
+          <div class="top-bar top-bar--header header__top-bar">
+            <a
+              href="#menu"
+              class="icon icon--menu"
+            ></a>
+            <a
+              href="#"
+              class="icon icon--header-logo"
+            >
+              <img
+                src="/src/images/header-logo.svg"
+                alt="NAMU logo"
+                class="top-bar__photo"
+              />
+            </a>
+          </div>
+        </div>
+        <div class="header__center">
+          <h1 class="header__title">Художній музей</h1>
+          <div class="header__box">
+            <div class="header__tickets">
+              <a
+                href="#events"
+                class="header__tickets-link"
+              >
+                Квитки
+              </a>
+            </div>
+            <div class="header__arrow">
+              <a
+                href="#contacts"
+                class="header__arrow-link"
+              >
+                <img
+                  src="/src/images/icon-arrow.svg"
+                  alt="Arrow icon"
+                  class="icon icon--arrow"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- #endregion -->
+    <!-- #region menu -->
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="menu__content">
+        <div class="menu__top">
+          <a
+            href="#"
+            class="icon icon--close"
+          ></a>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a
+                  href="#galery"
+                  class="nav__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#form"
+                  class="nav__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#events"
+                  class="nav__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#contacts"
+                  class="nav__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="menu__center">
+          <p class="menu__list-description">Графік роботи</p>
+          <div class="menu__center-lists">
+            <ul class="list menu__list">
+              <li class="list__item">
+                12:00 — 20:00
+                <span class="list__item-day">середа</span>
+              </li>
+              <li class="list__item">
+                12:00 — 20:00
+                <span class="list__item-day">четвер</span>
+              </li>
+              <li class="list__item">
+                12:00 — 20:00
+                <span class="list__item-day">п’ятниця</span>
+              </li>
+              <li class="list__item">
+                11:00 — 19:00
+                <span class="list__item-day">субота</span>
+              </li>
+              <li class="list__item">
+                11:00 — 19:00
+                <span class="list__item-day">неділя</span>
+              </li>
+            </ul>
+            <p class="menu__text">
+              <span class="menu__text-span">Вихідні:</span>
+              понеділок, вівторок
+              <br />
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <!-- #endregion -->
+    <main class="main page__main">
+      <div class="main__content">
+        <section
+          class="section"
+          id="events"
+        >
+          <h2 class="section__title">Актуальні події</h2>
+          <div class="section__articles">
+            <article class="article">
+              <img
+                src="/src/images/article-1photo.png"
+                alt="The painting"
+                class="article__photo"
+              />
+              <div class="article__info">
+                <div class="article__details">
+                  <p class="article__type">ВИСТАВКА</p>
+                  <p class="article__time">26.08-29.11.2019</p>
+                </div>
+                <h3 class="article__title article__title--red-icon">
+                  Йду і повертаюсь
+                </h3>
+                <p class="article__description">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+            <article class="article">
+              <img
+                src="/src/images/article-2photo.png"
+                alt="The painting"
+                class="article__photo"
+              />
+              <div class="article__info">
+                <div class="article__details">
+                  <p class="article__type">ВИСТАВКА</p>
+                  <p class="article__time">26.08-29.11.2019</p>
+                </div>
+                <h3 class="article__title article__title--red-icon">
+                  І спогади і мрії
+                </h3>
+                <p class="article__description">
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+            <article
+              class="article section__article section__article--third article--third"
+            >
+              <img
+                src="/src/images/article-3photo.png"
+                alt="The painting"
+                class="article__photo article__photo--full-width"
+              />
+              <div class="article__info">
+                <div class="article__box">
+                  <div class="article__details article__details--box">
+                    <p class="article__type">ЛЕКЦІЯ</p>
+                    <p class="article__time">26/08/2019 - 11:00</p>
+                  </div>
+                  <h3 class="article__title article__title--box">
+                    Від класицизму до романтизму
+                  </h3>
+                </div>
+              </div>
+            </article>
+          </div>
+        </section>
+        <section
+          class="section section--galery"
+          id="galery"
+        >
+          <h2 class="section__title">Галерея</h2>
+          <div class="swiper swiper--mobile">
+            <div class="swiper-wrapper swiper__wrapper swiper__wrapper--mobile">
+              <div class="swiper-slide swiper__slide">
+                <img
+                  src="/src/images/swiper-1photo.png"
+                  alt="The painting"
+                  class="swiper-image swipper__image swiper__image--mobile"
+                />
+              </div>
+              <div class="swiper-slide swiper__slide">
+                <img
+                  src="/src/images/swiper-2photo.png"
+                  alt="The painting"
+                  class="swiper-image swipper__image swiper__image--mobile"
+                />
+              </div>
+              <div class="swiper-slide swiper__slide">
+                <img
+                  src="/src/images/swiper-3photo.png"
+                  alt="The painting"
+                  class="swiper-image swipper__image swiper__image--mobile swiper__image--last"
+                />
+              </div>
+            </div>
+            <div class="swiper-pagination swiper__pagination"></div>
+          </div>
+
+          <div class="swiper swiper--tablet">
+            <div class="swiper-wrapper swiper__wrapper swiper__wrapper--tablet">
+              <div class="swiper-slide swiper__slide">
+                <img
+                  src="/src/images/swiper-1photo.png"
+                  alt="The painting"
+                  class="swiper-image swiper__image swiper__image--tablet"
+                />
+              </div>
+              <div class="swiper-slide swiper__slide">
+                <img
+                  src="/src/images/swiper-2photo.png"
+                  alt="The painting"
+                  class="swiper-image swiper__image swiper__image--tablet"
+                />
+              </div>
+              <div class="swiper-slide swiper__slide">
+                <img
+                  src="/src/images/swiper-3photo.png"
+                  alt="The painting"
+                  class="swiper-image swiper__image swiper__image--tablet swiper__image--last"
+                />
+              </div>
+            </div>
+            <div class="swiper-pagination swiper__pagination"></div>
+          </div>
+          <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+          <script src="scripts/main.js"></script>
+
+          <!-- #region images -->
+          <article class="article article--images">
+            <img
+              src="/src/images/swiper-1photo.png"
+              alt="The painting"
+              class="article__photo article__photo--first"
+            />
+            <img
+              src="/src/images/swiper-3photo.png"
+              alt="The painting"
+              class="article__photo article__photo--second"
+            />
+            <img
+              src="/src/images/article2-photo3.png"
+              alt="The painting"
+              class="article__photo article__photo--third"
+            />
+            <img
+              src="/src/images/article2-4photo.png"
+              alt="The painting"
+              class="article__photo article__photo--forth"
+            />
+          </article>
+          <!-- #endregion -->
+        </section>
+
+        <section class="section">
+          <div class="section__background"></div>
+          <div class="section__content section__content--subscription">
+            <h2 class="section__title section__title--white">Підписка</h2>
+            <p class="section__description">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form
+              method="post"
+              class="section__form"
+              id="form"
+              action="#"
+              onsubmit="this.reset(); window.scrollTo({ top: 0, behavior: 'smooth' }); return false;"
+            >
+              <input
+                type="email"
+                name="email"
+                class="section__email"
+                placeholder="E-mail"
+                required
+                title="Please enter a valid email address in the format: example@domain.com"
+              />
+              <button
+                class="section__button-arrow"
+                type="submit"
+              >
+                <img
+                  src="/src/images/icon-arrow.png"
+                  alt="Arrow icon"
+                  class="icon icon--right-arrow"
+                />
+              </button>
+            </form>
+          </div>
+        </section>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="footer__content">
+        <div class="footer__top-bar">
+          <a
+            href="#"
+            class="icon icon--footer-logo"
+          >
+            <img
+              src="/src/images/header-logo.svg"
+              alt="NAMU logo"
+              class="top-bar__photo top-bar__photo--footer"
+            />
+          </a>
+          <div class="footer__icons">
+            <a
+              href="https://www.facebook.com/namu.museum/"
+              class="icon icon--facebook"
+              target="_blank"
+            ></a>
+            <a
+              href="https://www.instagram.com/namu.museum/"
+              class="icon icon--instagram"
+              target="_blank"
+            ></a>
+          </div>
+        </div>
+
+        <div class="footer__center">
+          <div class="footer__schedule">
+            <p class="footer__title">Графік роботи</p>
+            <p class="footer__schedule-content">
+              <span class="footer__time">12:00 — 20:00</span>
+              середа
+              <br />
+              <span class="footer__time">12:00 — 20:00</span>
+              четвер
+              <br />
+              <span class="footer__time">12:00 — 20:00</span>
+              п’ятниця
+              <br />
+              <span class="footer__time">11:00 — 19:00</span>
+              субота
+              <br />
+              <span class="footer__time">11:00 — 19:00</span>
+              неділя
+              <br />
+              <br />
+              Вихідні понеділок, вівторок
+              <br />
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+          <div
+            class="footer__contacts"
+            id="contacts"
+          >
+            <p class="footer__title">Контакти:</p>
+            <div class="footer__contacts-content">
+              <a
+                href="https://www.google.com.ua/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4493984,30.5282085,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?hl=ru&entry=ttu&g_ep=EgoyMDI1MDIxOS4xIKXMDSoASAFQAw%3D%3D"
+                class="footer__contacts-links"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <br />
+              <a
+                href="tel:+38 (044) 278-13-57"
+                class="footer__contacts-links"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+              <br />
+              <a
+                href="tel:+38 (044) 278-74-54"
+                class="footer__contacts-links"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+              <br />
+              <a
+                href="mailto:info@namu.kiev.ua "
+                class="footer__contacts-links"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+              <br />
+            </div>
+            <a
+              href="#"
+              class="icon icon--arrow-up"
+            ></a>
+          </div>
+        </div>
+
+        <div class="footer__menu">
+          <nav class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a
+                  href="#galery"
+                  class="footer__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="footer__item">
+                <a
+                  href="#form"
+                  class="footer__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="footer__item footer__item--longer">
+                <a
+                  href="#events"
+                  class="footer__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="footer__item">
+                <a
+                  href="#contacts"
+                  class="footer__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer__bottom">
+          <p class="footer__info footer__info--first">
+            Designed by Zhyriada Marina
+          </p>
+          <p class="footer__info footer__info--second">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
